[gd_scene load_steps=6 format=3 uid="uid://c2blc7f14lhk7"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_7ohb4"]
[ext_resource type="PackedScene" uid="uid://bph3xavc6p43c" path="res://scenes/text_button.tscn" id="3_qoma4"]
[ext_resource type="PackedScene" uid="uid://bf64o081b6vag" path="res://scenes/icon_button.tscn" id="4_kc80j"]
[ext_resource type="PackedScene" uid="uid://j02kepvhv1xn" path="res://scenes/about_dialog.tscn" id="5_1asin"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c4cmj"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ohb4")

[node name="MainMenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 80.0
offset_right = 175.0
offset_bottom = 206.0
grow_horizontal = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/normal_font_size = 85
bbcode_enabled = true
text = "[center]Angry[color=red]Balls[/color][/center]"
fit_content = true

[node name="Spacer" type="HSeparator" parent="MainMenuContainer"]
layout_mode = 2
theme_override_constants/separation = 75
theme_override_styles/separator = SubResource("StyleBoxEmpty_c4cmj")

[node name="StartButton" parent="MainMenuContainer" instance=ExtResource("3_qoma4")]
layout_mode = 2

[node name="AboutButton" parent="MainMenuContainer" instance=ExtResource("3_qoma4")]
layout_mode = 2

[node name="QuitButton" parent="MainMenuContainer" instance=ExtResource("3_qoma4")]
layout_mode = 2

[node name="SettingsMenuContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -130.0
offset_bottom = -90.0
grow_horizontal = 0
grow_vertical = 0

[node name="MusicButton" parent="SettingsMenuContainer" instance=ExtResource("4_kc80j")]
layout_mode = 2

[node name="MoonButton" parent="SettingsMenuContainer" instance=ExtResource("4_kc80j")]
layout_mode = 2

[node name="AboutDialog" parent="." instance=ExtResource("5_1asin")]
